--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -66,7 +66,7 @@
         "canonical/destructuring-property-newline": "off",
         "canonical/import-specifier-newline": "off",
         "canonical/id-match": "off",
-        "unused-imports/no-unused-imports-ts": "error",
+        // "unused-imports/no-unused-imports-ts": "error",
         "id-length": [
           "error",
           {
