--- a/libs/backend/domain/shared/seeder/project.json
+++ b/libs/backend/domain/shared/seeder/project.json
@@ -1,30 +1,30 @@
 {
-  "name": "backend-domain-shared-seeder",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/backend/domain/shared/seeder/src",
+  "name": "backend-domain-shared-seeder",
   "projectType": "library",
+  "sourceRoot": "libs/backend/domain/shared/seeder/src",
+  "tags": [
+    "projectType:library",
+    "type:concrete",
+    "scope:backend",
+    "layer:domain"
+  ],
   "targets": {
     "lint": {
-      "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "libs/backend/domain/shared/seeder/**/*.{ts,tsx,js,jsx,graphql}"
-        ]
-      },
       "configurations": {
         "ci": {
           "format": "junit",
           "outputFile": "tmp/reports/lint/backend-domain-shared-seeder.xml",
           "quiet": true
         }
-      }
+      },
+      "executor": "@nx/eslint:lint",
+      "options": {
+        "lintFilePatterns": [
+          "libs/backend/domain/shared/seeder/**/*.{ts,tsx,js,jsx,graphql}"
+        ]
+      },
+      "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": [
-    "projectType:library",
-    "type:concrete",
-    "scope:backend",
-    "layer:domain"
-  ]
+  }
 }
