--- a/package.json
+++ b/package.json
@@ -102,7 +102,10 @@
     "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.3.2",
     "@supabase/supabase-js": "2.1.1",
-    "@swc/helpers": "0.5.2",
+    "@swc/helpers": "~0.5.2",
+    "@twind/core": "^1.1.3",
+    "@twind/preset-tailwind": "^1.1.4",
+    "@twind/with-next": "^1.2.2",
     "@uiw/react-codemirror": "4.11.6",
     "@vercel/analytics": "^1.0.1",
     "@vercel/kv": "^0.2.2",
@@ -198,6 +201,7 @@
     "tar": "^6.1.13",
     "ts-json-schema-generator": "^1.2.0",
     "tslib": "2.3.1",
+    "twind": "^0.16.19",
     "typebox-validators": "0.3.5",
     "typescript-json-schema": "^0.55.0",
     "uniforms": "3.10.2",
