--- a/.circleci/config/executors/docker-node-neo4j.yml
+++ b/.circleci/config/executors/docker-node-neo4j.yml
@@ -1,7 +1,7 @@
 # Docker containers work on a merged networking stack, the second container should make it available in localhost
 # https://discuss.circleci.com/t/whats-the-docker-hostname-for-the-second-container/20101
 docker:
-  - image: cimg/node:18.17.0
+  - image: cimg/node:18.16.0-browsers
   # https://circleci.com/docs/using-docker#using-multiple-docker-images
   # The `command` key is the command issued to the image
   - image: neo4j:5.11.0
