--- a/.circleci/config/jobs/setup-workspace.yml
+++ b/.circleci/config/jobs/setup-workspace.yml
@@ -1,6 +1,6 @@
 # Can't build with machine image, causes build issues
 executor: docker-node
-resource_class: arm.large
+resource_class: large
 steps:
   - checkout
   - setup-env
