--- a/apps/platform-e2e/project.json
+++ b/apps/platform-e2e/project.json
@@ -64,7 +64,7 @@
               "command": "npx nx serve platform -c ci"
             },
             {
-              "command": "npx nx serve platform-api -c ci"
+              "command": "npx nx serve platform-api -c ci --verbose"
             }
           ]
         }
