--- a/package.json
+++ b/package.json
@@ -64,8 +64,8 @@
     "@graphql-tools/merge": "8.2.11",
     "@graphql-tools/utils": "8.12.0",
     "@mailchimp/mailchimp_marketing": "3.0.80",
-    "@neo4j/graphql": "4.1.1",
-    "@neo4j/graphql-ogm": "4.1.1",
+    "@neo4j/graphql": "4.3.0",
+    "@neo4j/graphql-ogm": "4.3.0",
     "@nestjs/apollo": "11.0.6",
     "@nestjs/bull": "0.6.3",
     "@nestjs/common": "10.0.4",
@@ -102,7 +102,7 @@
     "@sotaproject/strikethrough": "^1.0.1",
     "@storybook/core-server": "7.3.2",
     "@supabase/supabase-js": "2.1.1",
-    "@swc/helpers": "~0.5.2",
+    "@swc/helpers": "0.5.3",
     "@twind/core": "^1.1.3",
     "@twind/preset-tailwind": "^1.1.4",
     "@twind/with-next": "^1.2.2",
@@ -153,7 +153,7 @@
     "moment": "2.29.4",
     "morphext": "2.4.7",
     "multer": "^1.4.5-lts.1",
-    "neo4j-driver": "5.12.0",
+    "neo4j-driver": "5.13.0",
     "nest-commander": "^3.7.1",
     "nest-neo4j": "^0.3.1",
     "nestjs-pino": "^3.2.0",
@@ -242,21 +242,21 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "10.0.1",
     "@nestjs/testing": "10.0.4",
-    "@nx/cypress": "16.7.4",
-    "@nx/devkit": "16.7.4",
-    "@nx/eslint-plugin": "16.7.4",
-    "@nx/jest": "16.7.4",
-    "@nx/js": "16.7.4",
-    "@nx/linter": "16.7.4",
-    "@nx/nest": "16.7.4",
-    "@nx/next": "16.7.4",
-    "@nx/node": "16.7.4",
-    "@nx/plugin": "16.7.4",
-    "@nx/react": "16.7.4",
-    "@nx/storybook": "16.7.4",
-    "@nx/web": "16.7.4",
-    "@nx/webpack": "16.7.4",
-    "@nx/workspace": "16.7.4",
+    "@nx/cypress": "16.10.0",
+    "@nx/devkit": "16.10.0",
+    "@nx/eslint-plugin": "16.10.0",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
+    "@nx/linter": "16.10.0",
+    "@nx/nest": "16.10.0",
+    "@nx/next": "16.10.0",
+    "@nx/node": "16.10.0",
+    "@nx/plugin": "16.10.0",
+    "@nx/react": "16.10.0",
+    "@nx/storybook": "16.10.0",
+    "@nx/web": "16.10.0",
+    "@nx/webpack": "16.10.0",
+    "@nx/workspace": "16.10.0",
     "@storybook/addon-essentials": "7.3.2",
     "@storybook/core-common": "7.0.7",
     "@storybook/nextjs": "7.0.7",
@@ -334,7 +334,7 @@
     "cookie": "^0.5.0",
     "cross-env": "7.0.3",
     "css-loader": "5.2.6",
-    "cypress": "^13.3.0",
+    "cypress": "^13.0.0",
     "cypress-jest-adapter": "^0.1.1",
     "cypress-log-to-output": "^1.1.2",
     "cypress-multi-reporters": "^1.6.3",
@@ -392,7 +392,7 @@
     "lerna": "^7.0.1",
     "lint-staged": "13.2.2",
     "madge": "5.0.1",
-    "nx": "16.7.4",
+    "nx": "16.10.0",
     "nx-cloud": "16.4.0",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
