--- a/package.json
+++ b/package.json
@@ -175,7 +175,7 @@
     "passport-local": "^1.0.0",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
-    "prettier": "3.0.3",
+    "prettier": "2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
     "re-resizable": "6.9.1",
@@ -205,6 +205,7 @@
     "styled-jsx": "^5.1.2",
     "stylis": "^4.0.0",
     "sucrase": "^3.32.0",
+    "supertest": "^6.3.3",
     "tar": "^6.1.13",
     "ts-json-schema-generator": "^1.2.0",
     "tslib": "2.3.1",
@@ -278,6 +279,7 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "1.3.92",
     "@swc/jest": "^0.2.29",
+    "@swc/plugin-styled-components": "^1.5.67",
     "@testing-library/cypress": "10.0.1",
     "@testing-library/dom": "9.2.0",
     "@testing-library/jest-dom": "5.16.5",
@@ -310,8 +312,8 @@
     "@types/passport-local": "^1.0.35",
     "@types/prettier": "2.7.3",
     "@types/ramda": "0.29.2",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
     "@types/react-grid-layout": "1.3.4",
     "@types/react-is": "18.2.2",
     "@types/react-resizable": "1.7.4",
@@ -321,6 +323,8 @@
     "@types/react-syntax-highlighter": "15.5.4",
     "@types/scroll-into-view": "^1.16.0",
     "@types/stringify-object": "4.0.1",
+    "@types/styled-components": "5.1.26",
+    "@types/supertest": "^2.0.16",
     "@types/tar": "^6.1.4",
     "@types/testing-library__cypress": "5.0.9",
     "@types/testing-library__jest-dom": "5.14.6",
@@ -337,6 +341,8 @@
     "ajv-keywords": "^5.1.0",
     "auth0-js": "^9.22.1",
     "autoprefixer": "10.4.14",
+    "babel-jest": "^29.4.1",
+    "babel-plugin-styled-components": "1.10.7",
     "chance": "^1.1.11",
     "commitizen": "4.2.5",
     "commitlint-config-cz": "0.13.3",
@@ -372,7 +378,7 @@
     "eslint-plugin-jsx-a11y": "6.8.0",
     "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "5.0.1",
+    "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-simple-import-sort": "10.0.0",
