--- a/package.json
+++ b/package.json
@@ -85,7 +85,10 @@
     "@next/bundle-analyzer": "14.0.2",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "0.38.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.34.0",
+    "@opentelemetry/context-zone": "^1.18.1",
     "@opentelemetry/core": "^1.15.2",
+    "@opentelemetry/exporter-metrics-otlp-grpc": "^0.45.1",
     "@opentelemetry/exporter-prometheus": "0.41.2",
     "@opentelemetry/exporter-trace-otlp-http": "0.41.2",
     "@opentelemetry/instrumentation": "^0.41.2",
@@ -97,6 +100,7 @@
     "@opentelemetry/sdk-node": "0.41.2",
     "@opentelemetry/sdk-trace-base": "^1.15.2",
     "@opentelemetry/sdk-trace-node": "^1.15.2",
+    "@opentelemetry/sdk-trace-web": "^1.18.1",
     "@opentelemetry/semantic-conventions": "1.15.2",
     "@react-hook/size": "2.1.2",
     "@react-hook/window-size": "3.0.7",
