--- a/.env.test.example
+++ b/.env.test.example
@@ -20,3 +20,5 @@ AUTH0_ISSUER_BASE_URL=https://codelab-app-dev.us.auth0.com/
 AUTH0_CLIENT_ID=vFxazFdMcHzjC90Y4CxWxT34gvZJjh76
 # Your Auth0 application's Client Secret
 AUTH0_CLIENT_SECRET=
+# Required for `initAuth0`
+AUTH0_AUDIENCE=https://codelab-app-test.us.auth0.com/api/v2/
