--- a/apps/platform-e2e/project.json
+++ b/apps/platform-e2e/project.json
@@ -49,7 +49,7 @@
         "test": {
           "commands": [
             {
-              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/healthcheck  && echo 'READY'"
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3001 http://127.0.0.1:4001/api/healthcheck  && echo 'READY'"
             },
             {
               "command": "npx nx serve platform -c test"
@@ -62,7 +62,7 @@
         "ci": {
           "commands": [
             {
-              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3000 http://127.0.0.1:4000/healthcheck && echo 'READY'"
+              "command": "npx wait-on --interval 1000 --delay 3000 http://127.0.0.1:3000 http://127.0.0.1:4000/api/healthcheck && echo 'READY'"
             },
             {
               "command": "npx nx serve platform -c ci"
