--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "neo4j-driver": "5.16.0",
     "nestjs-pino": "^3.2.0",
     "next": "13.5.3",
+    "next-http-proxy-middleware": "^1.2.6",
     "next-seo": "5.15.0",
     "node-fetch": "3.1.0",
     "object-typed": "^1.0.0",
