--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -131,6 +131,9 @@
       "@codelab/backend/infra/adapter/codelab": [
         "libs/backend/infra/adapter/codelab/src/index.ts"
       ],
+      "@codelab/backend/infra/adapter/graphql": [
+        "libs/backend/infra/adapter/graphql/src/index.ts"
+      ],
       "@codelab/backend/infra/adapter/logger": [
         "libs/backend/infra/adapter/logger/src/index.ts"
       ],
