--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "@fortawesome/pro-solid-svg-icons": "6.1.2",
     "@fortawesome/pro-thin-svg-icons": "6.1.2",
     "@fortawesome/react-fontawesome": "latest",
-    "@graphql-tools/merge": "8.2.11",
-    "@graphql-tools/utils": "8.12.0",
+    "@graphql-tools/merge": "^9.0.1",
+    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/utils": "10.0.13",
     "@mailchimp/mailchimp_marketing": "3.0.80",
     "@neo4j/graphql": "4.4.5",
     "@neo4j/graphql-ogm": "4.4.5",
