--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "@twind/core": "1.1.3",
     "@twind/preset-tailwind": "1.1.4",
     "@twind/with-next": "1.2.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/multer": "1.4.11",
     "@uiw/react-codemirror": "4.21.23",
     "@vercel/otel": "0.3.0",
@@ -135,6 +136,7 @@
     "class-validator": "0.14.0",
     "classnames": "2.3.2",
     "cm6-graphql": "0.0.9",
+    "cookie-parser": "^1.4.6",
     "core-js": "3.20.2",
     "cross-fetch": "3.1.4",
     "csv-parser": "3.0.0",
