--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@
 # Next
 #
 NEXT_PUBLIC_PLATFORM_HOST=http://127.0.0.1:3000
-NEXT_PUBLIC_PLATFORM_API_HOST=http://127.0.0.1:4000
+NEXT_PUBLIC_PLATFORM_API_HOST=http://127.0.0.1
+NEXT_PUBLIC_PLATFORM_API_PORT=4000
 
 #
 # Auth0 - Next - those are required by nextjs-auth0 - don't change their names
