--- a/libs/backend/application/redirect/project.json
+++ b/libs/backend/application/redirect/project.json
@@ -25,6 +25,56 @@
         ]
       },
       "outputs": ["{options.outputFile}"]
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "options": {
+        "jestConfig": "libs/backend/application/redirect/jest.config.ts",
+        "reporters": ["default"]
+      },
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "test:integration": {
+      "configurations": {
+        "ci": {
+          "parallel": 3
+        },
+        "dev": {
+          "reporters": ["default"]
+        },
+        "test": {
+          "reporters": ["default"]
+        }
+      },
+      "defaultConfiguration": "dev",
+      "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/backend/application/redirect/jest.config.ts",
+        "memoryLimit": 8192,
+        "testPathPattern": ["[i].spec.ts"]
+      },
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
+    },
+    "test:unit": {
+      "configurations": {
+        "dev": {
+          "reporters": ["default"]
+        },
+        "test": {
+          "reporters": ["default"]
+        }
+      },
+      "defaultConfiguration": "dev",
+      "executor": "@nx/jest:jest",
+      "options": {
+        "color": true,
+        "jestConfig": "libs/backend/application/redirect/jest.config.ts",
+        "memoryLimit": 8192,
+        "parallel": 3,
+        "testPathPattern": ["[^i].spec.ts"]
+      },
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"]
     }
   }
 }
