--- a/package.json
+++ b/package.json
@@ -297,6 +297,7 @@
     "@types/diff": "5.0.3",
     "@types/express": "4.17.13",
     "@types/flat": "5.0.2",
+    "@types/glob": "^8.1.0",
     "@types/graphql-iso-date": "3.4.0",
     "@types/inquirer": "8.2.1",
     "@types/jest": "29.5.2",
