--- a/scripts/eslint/.eslintrc.nx.json
+++ b/scripts/eslint/.eslintrc.nx.json
@@ -102,7 +102,8 @@
                   "type:abstract",
                   "layer:infra",
                   "scope:shared",
-                  "type:data"
+                  "type:data",
+                  "type:test"
                 ]
               },
               {
