--- a/libs/backend/application/admin/tsconfig.lib.json
+++ b/libs/backend/application/admin/tsconfig.lib.json
@@ -6,6 +6,9 @@
     "declaration": true,
     "types": ["node"]
   },
-  "include": ["src/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "../../domain/shared/modules/src/database/database.service.ts"
+  ],
   "exclude": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.test.ts"]
 }
