--- a/libs/backend/application/shared/project.json
+++ b/libs/backend/application/shared/project.json
@@ -18,6 +18,15 @@
           "libs/backend/application/shared/**/*.{ts,tsx,js,jsx,graphql}"
         ]
       }
+    },
+    "test": {
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "options": {
+        "jestConfig": "libs/backend/application/shared/jest.config.ts",
+        "reporters": ["default"],
+        "runInBand": true
+      }
     }
   },
   "tags": [
