--- a/.circleci/config/commands/build-repo.yml
+++ b/.circleci/config/commands/build-repo.yml
@@ -18,8 +18,8 @@ steps:
       key: nx-cache-{{ checksum ".nx/cache/lockfile.hash" }}
       paths:
         - ~/project/dist/apps/platform/.next/cache
-        - ~/project/dist/apps/landing/.next/cache
-        - ~/project/dist/apps/websites/.next/cache
+        # - ~/project/dist/apps/landing/.next/cache
+        # - ~/project/dist/apps/websites/.next/cache
     # This step needs to be after reset-cache
   - save_cache:
       name: 'Save NPM Cache'
