--- a/package.json
+++ b/package.json
@@ -354,7 +354,7 @@
     "cypress-jest-adapter": "0.1.1",
     "cypress-log-to-output": "1.1.2",
     "cypress-multi-reporters": "1.6.3",
-    "cypress-terminal-report": "5.1.1",
+    "cypress-terminal-report": "^6.0.1",
     "cz-customizable": "6.3.0",
     "dotenv": "15.0.0",
     "env-cmd": "10.1.0",
