--- a/apps/platform/tsconfig.json
+++ b/apps/platform/tsconfig.json
@@ -6,7 +6,6 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "composite": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -28,14 +27,14 @@
     ],
     "jsx": "preserve"
   },
-  "references": [
-    {
-      "path": "./tsconfig.spec.json"
-    },
-    {
-      "path": "./tsconfig.storybook.json"
-    }
-  ],
+  // "references": [
+  //   {
+  //     "path": "./tsconfig.spec.json"
+  //   },
+  //   {
+  //     "path": "./tsconfig.storybook.json"
+  //   }
+  // ],
   "include": [
     "**/*.ts",
     "**/*.tsx",
