--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     "moment": "2.29.4",
     "multer": "1.4.5-lts.1",
     "neo4j-driver": "5.16.0",
-    "nestjs-pino": "3.2.0",
+    "nestjs-pino": "4.0.0",
     "next": "13.5.3",
     "next-http-proxy-middleware": "1.2.6",
     "next-seo": "5.15.0",
@@ -174,8 +174,8 @@
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
-    "pino": "8.14.1",
-    "pino-http": "8.3.3",
+    "pino": "8.19.0",
+    "pino-http": "9.0.0",
     "prettier": "2.8.8",
     "puppeteer": "20.1.1",
     "ramda": "0.29.0",
@@ -406,6 +406,7 @@
     "madge": "5.0.1",
     "nx": "17.1.1",
     "nx-cloud": "16.5.2",
+    "pino-pretty": "^10.3.1",
     "postcss": "8.4.24",
     "postcss-import": "14.1.0",
     "storybook-css-modules": "1.0.8",
