--- a/libs/frontend/domain/element/.eslintrc.json
+++ b/libs/frontend/domain/element/.eslintrc.json
@@ -12,7 +12,7 @@
     {
       "files": ["*.ts", "*.tsx"],
       "rules": {},
-      "extends": ["plugin:@nx/react"]
+      "extends": ["plugin:@nx/react", "plugin:@codelab/recommended"]
     },
     {
       "files": ["*.js", "*.jsx"],
