--- a/libs/frontend/domain/resource/.eslintrc.json
+++ b/libs/frontend/domain/resource/.eslintrc.json
@@ -1,5 +1,9 @@
 {
-  "extends": ["plugin:@nx/react", "../../../../.eslintrc.json"],
+  "extends": [
+    "plugin:@nx/react",
+    "plugin:@codelab/recommended",
+    "../../../../.eslintrc.json"
+  ],
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
